--- a/GoldenLeague/client-app/src/locales/pl.json
+++ b/GoldenLeague/client-app/src/locales/pl.json
@@ -14,6 +14,7 @@
     "summaryRanking": "Ranking Podsumowujący"
   },
   "matchBetting": {
-    "yourBets": "Twoje typy"
+    "yourBets": "Twoje typy",
+    "saveYourBets": "Zapisz typy"
   }
 }
