Update match betting + filter bettings by gameweek

--- a/GoldenLeague/client-app/src/locales/pl.json
+++ b/GoldenLeague/client-app/src/locales/pl.json
@@ -6,7 +6,8 @@
     "ranking": "Ranking",
     "matchBetting": "Typer",
     "info": "Info",
-    "squad": "Skład"
+    "squad": "Skład",
+    "gameweek": "Kolejka"
   },
   "ranking": {
     "matchBettingRanking": "Ranking Typerów",
