error fixes, vue-the-mask instead of v-mask, gameweek table and premier league table

--- a/GoldenLeague/client-app/src/locales/pl.json
+++ b/GoldenLeague/client-app/src/locales/pl.json
@@ -7,7 +7,9 @@
     "matchBetting": "Typer",
     "info": "Info",
     "squad": "Skład",
-    "gameweek": "Kolejka"
+    "gameweek": "Kolejka",
+    "currentGameweek": "Aktualna kolejka",
+    "premierLeagueTable": "Tabela Premier League"
   },
   "ranking": {
     "matchBettingRanking": "Ranking Typerów",
