Bookmaker Leagues view + Layout changes

--- a/GoldenLeague/client-app/src/locales/pl.json
+++ b/GoldenLeague/client-app/src/locales/pl.json
@@ -5,6 +5,7 @@
     "points": "Punkty",
     "ranking": "Ranking",
     "bookmakerBets": "Typer",
+    "bookmakerLeagues": "Ligi typerów",
     "info": "Info",
     "squad": "Skład",
     "gameweek": "Kolejka",
